resolve unwanted stretching with infrmation images

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ button {
 }
 
 .item {
+    flex: 1;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -129,8 +130,10 @@ button {
 }
 
 .item img {
+    width: 100%;
     max-width: 200px;
-    align-self: center;
+    aspect-ratio: 1 / 1;
+
 }
 
 .item p {
